<resources>

    <color name="head_gradient_start">#AE4A84</color>
    <color name="head_gradient_end">#660066</color>
    <color name="head_buttons_border">#570D57</color>
    <color name="list_element_gradient_start">#FEFEFE</color>
    <color name="list_element_gradient_end">#EBECEC</color>
    <color name="list_element_gradient_start_active">#D9DADA</color>
    <color name="list_element_gradient_end_active">#C5C6C6</color>
    <color name="list_element_text">#696969</color>
    <color name="list_separator_color">#e9e9e9</color>
    <color name="element_background">#EBECEC</color>
    <color name="element_text">#5B5B5B</color>
    <color name="search_block_background_gradient_start">#E6E6E6</color>
    <color name="search_block_background_gradient_end">#CCCCCC</color>
    <color name="search_block_border">#9D9E9E</color>
    <color name="search_textfield_background">#EBECEC</color>
    <color name="search_textfield_border">#5B5B5B</color>
    <color name="main_background">#EBECEC</color>

    <string name="admob_publisher_id">a1506823658c396</string>
    <string name="version">1.03</string>
    <string name="versiontext">Версия</string>
    <string name="about_text">Информационная программа о пищевых добавках. \n</string>
    <string name="thx_text">Спасибо за использование данного приложения. Если вас не затруднит, оставьте отзыв на play.google.com. В будущем планируется делать ранжирование добавок не по запрещенности/разрешенности, а по степени вредности/опасности для здоровья. 
    Как вы считаете, имеет ли эта перемена смысл? Для нас очень важно ваше мнение. </string>
    <string name="menu_settings">Settings</string>
    <string name="about">О программе</string>
    <string name="categories">Категории</string>
    <string name="favorites">Избранное</string>
    <string name="search_hint">Поиск</string>
    <string name="head_text">Е-еда</string>
    <string name="app_name">E-eda</string>
    <string name="title_activity_main">E-eda</string>
    <string name="legend">Легенда</string>
    <string name="thx">Спасибо!</string>
    <string name="banned_text">Под красной иконкой отмечены вещества, категорически запрещенные на территории России.\n\n</string>
    <string name="warning_text">Добавки, запрещенные в ряде стран, в России не тестировались или проходят тестирование, но окончательного результата пока нет.</string>
    <string name="accepted_text">Вещества, разрешенные на территории России</string>
    <string name="documents">Классификация веществ сделана на основе следующий документов:\n
- Федеральный закон «О санитарно-эпидемиологическом благополучии населения» от 30.03.1999 г. N 52-ФЗ\n
- Федеральный закон «О качестве и безопасности пищевых продуктов» от 02.01.2000, N 29-ФЗ\n
- Федеральный закон «Основы законодательства Российской Федерации об охране здоровья граждан» от 22.07.1993\n
- СанПиН 2.3.2.1293-03 «Гигиенические требования по применению пищевых добавок» — c 12 июня 2003 года\n\n

За достоверность и точность информации, а также за нанесенный прямой или косвенный вред, разработчики ответственности не несут.</string>
    <string name="by_type">По типу</string>
    <string name="by_number">По номеру</string>

    <string-array name="main_list">
        <item> Выбор по номеру </item>
        <item> Выбор по типу </item>
        <item> Избранное </item>
        <item> Легенда </item>
    </string-array>
    <string-array name="numbers_level1">
        <item> E100-199 Красители </item>
        <item> E200-299 Консерванты </item>
        <item> E300-399 Антиоксиданты </item>
        <item> E400-599 Стабилизаторы, эмульгаторы </item>
        <item> E600-699 Усилители вкуса и аромата </item>
        <item> E900-999 Антифламинги </item>
        <item> E1000-1600 Другие вещества </item>
    </string-array>
    <string-array name="dangerous_levels">
        <item>Разрешенные в России</item>
        <item>Добавки, которые не тестировались или проходят тестирование, но окончательного результата пока нет.</item>
        <item>Запрещенные в России</item>
    </string-array>

    <string name="title_activity_legend">E-eda</string>

</resources>